--- a/src/main/resources/templates/task-log.html
+++ b/src/main/resources/templates/task-log.html
@@ -51,7 +51,7 @@
             <el-table-column
                     width="1200"
                     prop="execResultText"
-                    label="成功|异常信息"
+                    label="成功或异常信息"
                     sortable
                     show-overflow-tooltip>
                 <template slot-scope="scope">
