--- a/src/main/resources/templates/task-manager.html
+++ b/src/main/resources/templates/task-manager.html
@@ -113,7 +113,7 @@
 
             <el-table-column width="150" sortable prop="execResult" label="最近一次执行结果" align="center">
                 <template slot-scope="scope">
-                    <div>{{scope.row.execResult === 1 ? '成功' : '失败'}}</div>
+                    <div>{{scope.row.execResult === null ? null : scope.row.execResult ===  1 ? '成功' : '失败'}}</div>
                 </template>
             </el-table-column>
 
