--- a/src/main/resources/templates/task-log.html
+++ b/src/main/resources/templates/task-log.html
@@ -44,14 +44,14 @@
                     label="执行结果"
                     align="center">
                     <template slot-scope="scope">
-                        <div>{{scope.row.execResult === 1 ? '成功' : '失败'}}</div>
+                        <div>{{scope.row.execResult === -1 ? '执行中' : scope.row.execResult === 1 ? '成功' : '失败'}}</div>
                     </template>
             </el-table-column>
 
             <el-table-column
                     width="1200"
                     prop="execResultText"
-                    label="成功|异常信息"
+                    label="成功或异常信息"
                     sortable
                     show-overflow-tooltip>
                 <template slot-scope="scope">
